# sortsim

./: CMakeLists.txt  LICENSE.md
src/: main.c  sorts.c  sorts.h  visualizer.c  visualizer.h
src/sorts/: bogo_sort.c  bogo_sort.h  bubble_sort.c  bubble_sort.h  cocktail_shaker_sort.c  cocktail_shaker_sort.h  heap_sort.c  heap_sort.h  insertion_sort.c  insertion_sort.h  merge_sort.c  merge_sort.h  quick_sort.c  quick_sort.h  selection_sort.c  selection_sort.h  shell_sort.c  shell_sort.h  sorts.c  sorts.h
tools/unix/: configure_debug.sh  configure_release.sh  run.sh
